# SoundVision

./: .gitignore  CMakeLists.txt  LICENSE  README.md
Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
Source/dsp/: BandFilter.cpp  BandFilter.h  ParticleSystem.cpp  ParticleSystem.h  StereoAnalyzer.cpp  StereoAnalyzer.h
Source/ipc/: SoundVisionHub.cpp  SoundVisionHub.h  SourceSnapshot.h
Source/params/: PluginParameters.cpp  PluginParameters.h
Source/ui/: BandSpectrumView.cpp  BandSpectrumView.h  FieldRenderer.cpp  FieldRenderer.h  SoundVisionLookAndFeel.cpp  SoundVisionLookAndFeel.h  SourceLegend.cpp  SourceLegend.h  SpatialView.cpp  SpatialView.h
scripts/: build.ps1  configure.ps1  install-vst3.ps1  package-release.ps1
